# fastoj

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.dev  Dockerfile.judge  Dockerfile.worker  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  mock_server.py  pg_service.conf  pyproject.toml  submit_code.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
backend/: alembic.ini  main.py
backend/.claude/: settings.local.json
backend/ai/: __init__.py  config.py  profiles.py  schemas.py  service.py
backend/alembic/: env.py
backend/api/: admin.py  admin_agent.py  ai.py
backend/core/: code_normalization.py  config.py  database.py  languages.py  locales.py  security.py  time.py  validators.py
backend/models/: __init__.py
backend/sandbox/: docker_executor.py  executor.py  security.py
docs/: ACCEPTANCE_HARNESS.md  CODEX_HANDOFF.md  CODEX_PROGRESS.md  CODEX_RECOVERY_PROMPT.md  DEPLOYMENT.md  codex-checkpoint.patch  dependency-audit.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
postgres_init/: setup.sql
tests/: conftest.py  test_admin_rbac.py  test_ai_service.py  test_auth_api.py  test_config.py  test_create_admin_script.py  test_function_mode.py  test_judge_consumer.py  test_judge_task_security.py  test_judge_worker.py  test_language_runners.py  test_models.py  test_problem_authoring_agent.py  test_problem_detail_api.py  test_problem_discussions.py  test_queue_streams.py  test_sandbox_executor.py  test_seed_catalog.py  test_services.py  test_solution_api.py  test_submission_service.py  test_websocket_auth.py
(+120 files in other folders)
