[project]
name = "fastoj"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "docker==7.0.0",
    "requests<2.32",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "email-validator==2.1.0.post1",
    "bcrypt==4.2.0",
    "passlib==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "ruff==0.1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long
    "B008",  # Depends in defaults (FastAPI pattern)
    "E402",  # Import not at top (FastAPI pattern)
    "E712",  # True/False comparison
    "N805",  # First argument naming (Pydantic validator)
    "B904",  # Raise in except (FastAPI pattern)
    "F841",  # Unused variable (intentional placeholders)
    "E741",  # Ambiguous variable name (single letter)
    "B007",   # Unused loop variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]
"mock_server.py" = ["N802"]
"main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
